--- a/productlanding/product.css
+++ b/productlanding/product.css
@@ -1,13 +1,38 @@
-
+@import url('https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap');
+header {
+  display: flex;
+  justify-content: space-around;
+  align-itmes: center;
+}
+nav {
+  diplay: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+h1 {
+  display: flex;
+  justify-content: center;
+}
 #nav-bar {
     top: 0;
     width: 100%;
     height: 50px;
     position: fixed;
 }
-
+table, th, td {
+  border: 1px solid #333;
+  border-collapse: collapse;
+}
+body {
+  background-color: #05ffb0;;
+  font-family: 'Ruge Boogie', cursive; 
+}
 @media (min-height: 700px) {
     p {
-        font-size: 10px
+        font-size: 10px;
     }
  }
+img {
+  width: 100%;
+  height: auto;
+}
