--- a/technicalDoc/tech.css
+++ b/technicalDoc/tech.css
@@ -1,29 +1,60 @@
 @import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+html,
+body {
+  min-width: 290px;
+  color: #4d4e53;
+  background-color: #ffffff;
+  font-family: "Open Sans", Arial, sans-serif;
+  line-height: 1.5;
+}
 header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  color: black;
+  margin: 10px;
+  text-align: center;
+  font-size: 2em;
+  font-weiht: thin;
 }
-nav {
-  diplay: flex;
-  flex-direction: row;
-  justify-content: space-around;
+#navbar {
+  position: fixed;
+  min-width: 250px;
+  top: 0px;
+  left: 0px;
+  width: 270px;
+  height: 75%;
+  border-bottom: solid;
+  border-right: solid;
+  border-color: rgba(0, 22, 22, 0.4);
 }
-h1 {
-  display: flex;
-  justify-content: center;
+#navbar ul {
+  height: 88%;
+  padding: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
-p {
-  font-family: "Muli", cursive;
-}
-@media (min-height: 700px) {
-  p {
-    font-size: 10px;
-  }
-}
-img {
+
+#navbar li {
+  color: #4d1e53;
+  border-top: 1px solid;
+  list-style: none;
+  position: relative;
   width: 100%;
-  height: auto;
+}
+
+#navbar a {
+  display: block;
+  padding: 10px 30px;
+  color: #4d4e23;
+  cursor: pointer;
+}
+#main-doc {
+  position: absolute;
+  margin-left: 270px;
+}
+section article {
+  color: #4d4e53;
+  margin: 15px;
+  font-size: 0.96em;
+  font-family: "Muli", cursive;
 }
 code {
   display: block;
@@ -37,4 +68,48 @@ code {
   padding: 15px;
   margin: 10px;
   border-radius: 5px;
+}
+footer {
+  text-align: right;
+}
+
+@media only screen and (max-width: 815px) {
+  /* For mobile phones: */
+  #navbar ul {
+    border: 1px solid;
+    height: 200px;
+  }
+
+  #navbar {
+    background-color: rgb(78, 170, 177);
+    position: absolute;
+    width: 100%;
+    top: 0;
+    padding: 0;
+    margin: 0;
+    max-height: 275px;
+    z-index: 1;
+    border-bottom: 2px solid;
+  }
+
+  #main-doc {
+    position: relative;
+    margin-left: 0px;
+    margin-top: 270px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #main-doc {
+    margin-left: -10px;
+  }
+
+  code {
+    margin-left: -20px;
+    width: 100%;
+    padding: 15px;
+    padding-left: 10px;
+    padding-right: 45px;
+    min-width: 233px;
+  }
 }
