--- a/index.css
+++ b/index.css
@@ -1,9 +1,45 @@
 @import url("https://fonts.googleapis.com/css?family=Arvo&display=swap");
 #doc {
   font-family: "Arvo", serif;
-  background-color: #8f9193;
+  color: #6d2067;
+  background-image: linear-gradient(45deg, #7793af 0%, #2581dd 100%);
+}
+#navbar {
+  background-color: #2e7a51;
+  display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  padding: 10px;
+  width: 100%;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
+  z-index: 5;
+}
+#welcome-section {
+  height: 100vh;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-image: linear-gradient(75deg, #3b605b 0%, #07eacb 100%);
+}
+#projects {
+  height: 200px;
 }
 .project-tile {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 5px;
+}
+#contact {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media screen and (max-width: 600px) {
+  #doc {
+    width: 100%;
+    padding: 0 5px;
+  }
 }
